<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btn_details_menu_add_to_widget"
        android:title="@string/add_to_widget"
        app:showAsAction="always" />

</menu>