<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_main_no_internet_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/no_internet_found_description"
        android:src="@drawable/img_no_internet_found_error"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rc_view_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>